--- a/Controls/JsonInputDialog.xaml
+++ b/Controls/JsonInputDialog.xaml
@@ -5,7 +5,8 @@
         Height="500" 
         Width="600"
         WindowStartupLocation="CenterOwner"
-        ResizeMode="CanResize">
+        ResizeMode="CanResize"
+        ShowInTaskbar="True">
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
