--- a/Controls/QueryTextEditWindow.xaml
+++ b/Controls/QueryTextEditWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
         Title="SQL Query Edit" Height="500" Width="700"
         WindowStartupLocation="CenterOwner"
-        ShowInTaskbar="False">
+        ShowInTaskbar="True">
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
